Remove tasks available now; some style changes; and errors warnings; also added link to live preview

--- a/client/main.html
+++ b/client/main.html
@@ -13,6 +13,7 @@
     </nav>
 
     <div class="container">
+        <p class="bg-danger text-danger"></p>
         <div class="row">
             <div class="col-md-12">
                 {{>todoList}}
