--- a/client/todo_element.html
+++ b/client/todo_element.html
@@ -1,3 +1,3 @@
 <template name="todoElement">
-    <li><a class="{{class}}" href="#">{{todo}}</a></li>    
+    <li><button class="delete">&times;</button><a class="{{class}}" href="#">{{todo}}</a></li>    
 </template>
