Hide completed tasks feature and a bit more defaults values

--- a/client/todo_list.html
+++ b/client/todo_list.html
@@ -1,4 +1,8 @@
 <template name="todoList">
+    <label class="hide-completed checkbox-inline">
+        <input type="checkbox" checked="{{hideCompleted}}" />
+        Hide Completed Tasks
+    </label>
     <div id="todo-list">
         <div class="form-group">
             <input type="text" id="todo-input">
