Added incompleted tasks feature

--- a/client/todo_list.html
+++ b/client/todo_list.html
@@ -13,5 +13,6 @@
                 {{>todoElement}}
             {{/each}}
         </ul>
+        <div class="incompleted">You have <span class="amount">{{incompleteCount}}</span> incompleted tasks.</div>
     </div>
 </template>
